# LocalOCR

./: .gitignore  README.md  ocr_once.ps1  ocr_smart.ps1  pyproject.toml  release_resources.ps1  start.bat  start.ps1  start_server.ps1  stop_server.ps1
docs/: ARCHITECTURE.md  MODELS.md  QUICKSTART_FOR_AI.md  TROUBLESHOOTING.md  design-spec.md
docs/superpowers/plans/: 2026-07-07-localocr-job-cache.md  2026-07-07-smart-router-v2.md  2026-07-12-localocr-readiness-wrapper.md
docs/superpowers/specs/: 2026-07-12-localocr-readiness-wrapper-design.md
localocr/: cli.py  gpu_broker.py  gpu_probe.py  job_registry.py  model_profiles.json  model_registry.py  outputs.py  path_utils.py  pdf_utils.py  router.py  server.py  service.py  smart_router.py
localocr/engines/: __init__.py  ppocrv6.py  structure.py  vl.py
scripts/: download_models.py  install_wsl.sh  run_in_wsl.sh  start_server_background.sh
tests/: TEST_REPORT.md  make_samples.py  run_tests.py  test_gpu_broker.py  test_job_registry.py  test_model_registry.py  test_path_utils.py  test_router.py  test_service_process.py  test_smart_router.py  test_windows_wrappers.py
