[project]
name = "localocr"
version = "0.1.0"
description = "Local high-quality Chinese OCR on RTX 5090D via PaddleOCR 3.7 + PaddlePaddle GPU cu129"
requires-python = ">=3.10"
dependencies = [
    "paddlepaddle-gpu==3.3.1",
    "paddleocr==3.7.0",
    "pypdfium2>=5.11",
]

[project.scripts]
localocr = "localocr.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["localocr", "localocr.engines"]
